# opae-sdk

ase/: CMakeLists.txt
ase/in/: CMakeLists.txt.in
ase/rtl/: CMakeLists.txt
ase/samples/intg_xeon_nlb/: sources.txt
ase/sw/: CMakeLists.txt
cmake/modules/: FindQuesta.cmake
